@@ -113,8 +113,19 @@ static void oci8_lob_free(oci8_base_t *base)
         && OCILobIsTemporary(oci8_envhp, oci8_errhp, lob->base.hp.lob, &is_temporary) == OCI_SUCCESS
         && is_temporary) {
 
+#ifdef HAVE_RB_THREAD_BLOCKING_REGION
+        oci8_svcctx_t *svcctx = oci8_get_svcctx(lob->svc);
+        oci8_temp_lob_t *temp_lob = ALLOC(oci8_temp_lob_t);
+
+        temp_lob->next = svcctx->temp_lobs;
+        temp_lob->lob = lob->base.hp.lob;
+        svcctx->temp_lobs = temp_lob;
+        lob->base.type = 0;
+        lob->base.hp.ptr = NULL;
+#else
         /* FIXME: This may stall the GC. */
         OCILobFreeTemporary(lob->svchp, oci8_errhp, lob->base.hp.lob);
+#endif
     }
     lob->svc = Qnil;
     lob->svchp = NULL;
